2010-01-06  Kevin Decker  <kdecker@apple.com>

        Reviewed by Simon Fraser.

        Second step of:
        <rdar://problem/6398111> Integrate hardware layers with out-of-process plug-ins layer hosting mechanism

        * Plugins/Hosted/WebHostedNetscapePluginView.h: Expose the CALayer of the plugin by adding -pluginLayer method.
        * Plugins/Hosted/WebHostedNetscapePluginView.mm:
        (-[WebHostedNetscapePluginView pluginLayer]): Added.
        * Plugins/WebNetscapePluginView.h: Expose the CALayer of the plugin by adding -pluginLayer method.
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView pluginLayer]): Added.

2010-01-06  Kevin Decker  <kdecker@apple.com>

        Reviewed by Eric Carlson.

        First step toward:
        <rdar://problem/6398111> Integrate hardware layers with out-of-process plug-ins layer hosting mechanism
        
        Small refactoring moving the PluginWidget class from WebKit to WebCore.

        * WebCoreSupport/WebFrameLoaderClient.mm: Use the WebCore version of PluginWidget.

2010-01-05  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        Re-enable plug-in halting on Mac after r51953

        * WebCoreSupport/WebPluginHalterClient.mm:
        (WebPluginHalterClient::enabled): Test for the correct selector.

2010-01-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Ada Chan and Mark Rowe.

        Updated copyright string

        * Info.plist:

2009-12-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Alexey Proskuryakov.

        plugins/get-url-with-iframe-target.html fails on SnowLeopard (64-bit)
        https://bugs.webkit.org/show_bug.cgi?id=32982
        
        This test has been failing on SnowLeopard since it was landed.
        
        The problem is that we never delivered the notification for
        NPN_GetURLNotify, in the frame-targeting case, for out-of-process
        plugins on Mac.
        